@@ -1727,10 +1727,8 @@ ItemOBJ = [
 */
 
 ItemID = [
-"###", // ID for ItemOBJ[0]
-"###","###","###","###","###","###","###","###","###","###", // ID for ItemOBJ[1-10]
-"###","###","###","###","###","###","###","###","###","###", // ID for ItemOBJ[11-20]
-"###","###","###","###","###","###","###","###","###","###", // ID for ItemOBJ[21-30]
+'###',[1201,1202],[1204,1205],[1207,1208],[1210,1211],[1213,1214],[1216,1217],[1238],[1239],[1219,1220],[1222,1226],[1234],[1223],[1232,13033],[1236,13018],[1237],[1101,1102],[1104,1105],[1107,1108],[1110,1111],[1113,1114],[1122,1125],[1144],[1124],[1142],[1143],[1126,1127],[1123,1128],[1145],[1119,1120],[1129,1149],[1136],[1131],[1133],[1135,13400],[1138],[1139],[1116,1117],[1151,1152],[1154,1155],[1160,1162],[1157,1158],[1163,1172],[1169,1179],[1164],[1170],[1168,1171],[1165],[1401,1402],[1404,1405],[1407,1408],[1417],[1413,1418],[1451,1452],[1454,1455],[1457,1458],[1460,1461],[1463,1464],[1410],[1468,1481],[1466,1476],[1301,1302],[1304,1309],[1306],[1351,1352],[1354,1355],[1357,1358],[1360,1361],[1363],[1366],[1364],[1501,1502],[1504,1505],[1507,1508],[1510,1511],[1519,1520],[1513,1514],[1531],[1516,1517],[1522,1532],[1529],[1524,1539],[1525],[1528,1540],[1530],[1601,1602],[1604,1605],[1607,1608],[1472],[1615],[1610,1611],[1614],[1473],[1613],[1701,1702],[1704,1705],[1707,1708],[1710,1711],[1713,1715],[1721],[1714,1716],[1718,1726],[1719],[1722,1727],[1720],[1250,1251],[1259,1278],[1257,1276],[1258,1277],[1256,1275],[1252,1253],[1260],[1254,1255],[1261,1266],[1550],[1556,1571],[1553,1568],[1555,1570],[1554,1569],[1551],[1552],[1558],[1557],[1801,1802],[1803,1804],[1805,1806],[1809,1810],[1811,1812],[1807,1808],[1901,1902],[1903,1904],[1905,1906],[1909,1910],[1911,1912],[1907,1908],[1950,1951],[1952,1953],[1954,1955],[1958,1959],[1960,1961],[1956,1957],[1964],'###',[2289],[2206],[5042],[5041],[5047],[2210],[5028],[2282],[5048],[2207],[5034],[5023],[2274],[2285],[5032],[5024],[5026],[2236],[2294],[5027],[5003],[2259],[2208,2209],[2250],[2293],[5008],[5049],[5036],[5052],[2290],[2253,5351],[2272],[2271],[2211],[2279],[2214],[2220,2221],[2275],[5035],[2215],[5012,5347],[2277],[5038],[2257],[2244,5348],[2254],[2213],[2298],[5011],[5010],[2248],[2247],[5020],[2249],[2232,2233],[5045],[2245],[5029],[5033],[5030],[5001],[5007],[2255],[2273],[2287,5350],[5016,5349],[2280],[2222,2223],[5009],[2283],[5015],[2252],[5021],[2226,2227],[2235],[5002],[2230,2231],[2234],[2216,2217],[2261],[5039],[5018],[5031],[2284],[5037],[5022,5353],[2299,5157],[5019,5163],[2256,5160],[5050],[2251,5158],[5025],[2246,5159],[2224,2225],[5046,5168],[2264,5167],[5053,5166],[2258,5161],[2228,2229],[5017,5162],'###',[2203,2204],[2201,2202],[2205],[5040],[2212],[2263],[2291],
+"###","###","###","###","###","###","###","###","###","###", //251-260
 "###","###","###","###","###","###","###","###","###","###",
 "###","###","###","###","###","###","###","###","###","###",
 "###","###","###","###","###","###","###","###","###","###",
@@ -1859,41 +1857,18 @@ ItemID = [
 "###","###","###","###","###","###","###","###","###","###",
 "###","###","###","###","###","###","###","###","###","###",
 "###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###","###","###","###","###","###","###",
-"###","###","###","###",18878,5516,18531,20175,1291,2474,
-2592,15138,19026,"###","###","###","###",18754,16001,8926,
-18773,5506,5507,2456,2457,2458,2473,1742,1748,18106, // ID for ItemOBJ[1561-1570]
-13050,13051,13066,1583,1931,21000,21000,13310,1289,1831, // ID for ItemOBJ[1571-1580]
-16004,16005,16014,2560,2571,13112,13113,13114,13423,13424, // ID for ItemOBJ[1581-1590]
-13434,1192,1193,1197,1434,1662,1663,1658,1391,15009, // ID for ItemOBJ[1591-1600]
-15010,15011,15031,1986,2568,5418,18649,20031,20030,8801, // ID for ItemOBJ[1601-1610]
-2910,2911,2873,2907,2646,1393,1392,13062,2854,"###", // ID for ItemOBJ[1611-1620]
-"###",1985,13431,13070,13069,22014,1295,5211,18776,22015, // ID for ItemOBJ[1621-1630]
-21001,2183,15068,"###","###","###","###","###","###",2005, // ID for ItemOBJ[1631-1640]
-2956,18772,18774,18775,18760,18761,18763,18764,18769,18770, // ID for ItemOBJ[1641-1650]
-18771,18762,1584,18767,18766,18768,18765,18574,18837,18819, // ID for ItemOBJ[1651-1660]
+"###","###","###","###",[18878],[5516],[18531],[20175],[1291],[2474],
+[2592],[15138],[19026],"###","###","###","###",[18754],[16001],[8926],
+[18773],[5506],[5507],[2456],[2457],[2458],[2473],[1742],[1748],[18106], // ID for ItemOBJ[1561-1570]
+[13050],[13051],[13066],[1583],[1931],[21000],[21000],[13310],[1289],[1831], // ID for ItemOBJ[1571-1580]
+[16004],[16005],[16014],[2560],[2571],[13112],[13113],[13114],[13423],[13424], // ID for ItemOBJ[1581-1590]
+[13434],[1192],[1193],[1197],[1434],[1662],[1663],[1658],[1391],[15009], // ID for ItemOBJ[1591-1600]
+[15010],[15011],[15031],[1986],[2568],[5418],[18649],[20031],[20030],[8801], // ID for ItemOBJ[1601-1610]
+[2910],[2911],[2873],[2907],[2646],[1393],[1392],[13062],[2854],"###", // ID for ItemOBJ[1611-1620]
+"###",[1985],[13431],[13070],[13069],[22014],[1295],[5211],[18776],[22015], // ID for ItemOBJ[1621-1630]
+[21001],[2183],[15068],"###","###","###","###","###","###",[2005], // ID for ItemOBJ[1631-1640]
+[2956],[18772],[18774],[18775],[18760],[18761],[18763],[18764],[18769],[18770], // ID for ItemOBJ[1641-1650]
+[18771],[18762],[1584],[18767],[18766],[18768],[18765],[18574],[18837],[18819], // ID for ItemOBJ[1651-1660]
 "###" // ID for ItemOBJ[1661]
 ];
 
@@ -1931,10 +1906,16 @@ function ClickB_Item(CBI)
 	if(eval(document.calcForm.ITEM_SW.checked)==0)
 		return;
 
-    if(ItemID[CBI] != "###")
-	     myInnerHtml("nm080",ItemOBJ[CBI][8] + " # Item ID : <a class=\"linkW\" href=\"https://panel.talonro.com/itemdb/"+ ItemID[CBI] + "/\" target=\"_blank\"><b>" + ItemID[CBI] + "</b></a>",0);
-      else
+   if(ItemID[CBI] != "###"){
+      var itemLink = "";
+      for(i = 0; i < ItemID[CBI].length; i++){
+         itemLink += " <a class=\"linkW\" href=\"https://panel.talonro.com/itemdb/"+ ItemID[CBI][i] + "/\" target=\"_blank\"><b>" + ItemID[CBI][i] + "</b></a>";
+      }
+      myInnerHtml("nm080",ItemOBJ[CBI][8] + " # Item ID :" + itemLink,0);
+   }
+   else{
         myInnerHtml("nm080",ItemOBJ[CBI][8],0);
+   }
 
 	myInnerHtml("ITEM1","Slot",0);
 	myInnerHtml("ITEM3","Req. Lvl",0);
